# awesIO

./: .gitignore  LICENSE  README.md  pixi.toml  pyproject.toml  requirements.txt
.github/workflows/: docs.yml
AWES_Orthology/: config_baseline.yaml
data/TUDELFT_V3_KITE/: struc_geometry_level_1_manual.yaml
docs/: Makefile  QUICK_REFERENCE.md  SCHEMA_DOCUMENTATION.md  SCHEMA_SUMMARY.md  conf.py  generate_switcher_json.py  index.rst  make.bat  requirements.txt  schema_export.py
docs/_static/: custom.css
docs/assets/: gh-pages-redirect.html
docs/jsfh_template/: base.html  content.html
docs/source/: airborne_schema.rst  api_reference.rst  changelog.rst  developer_guide.rst  examples.rst  getting_started.rst  ground_station_schema.rst  how_to_build_a_kite_model.rst  operational_constraints_schema.rst  power_curves_schema.rst  system_schema.rst  tether_schema.rst  wind_resource_schema.rst
examples/: airborne.yml  clustered_profiles_wind_resource.yml  ground_station.yml  operational_constraints.yml  power_curves.yml  tether.yml  wind_resource.yml
examples/AWES_Ontology/: config_baseline.yaml  wind_resource.yml
examples/fly_gen/: fixed_wing_fly_gen_airborne.yml  fly_gen_ground_station.yml  fly_gen_operational_constraints.yml  fly_gen_tether.yml
examples/ground_gen/: ground_gen_ground_station.yml  ground_gen_tether.yml  (+5 more)
scripts/: .gitkeep  validate_airborne.py  validate_all.py  validate_ground_station.py  validate_operational_constraints.py  validate_power_curves.py  validate_tether.py  validate_wind_resource.py  validate_yaml.py
tests/: .gitkeep
(+10 files in other folders)
