[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "awesio"
version = "0.1.0"
description = "Input/Output standard for airborne wind energy systems"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "AWES Research Team"}
]
dependencies = [
    "numpy",
    "ruamel.yaml",
    "netCDF4",
    "xarray",
    "jsonschema",
    "referencing",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["awesio*"]

[tool.setuptools.package-data]
awesio = ["schemas/*.yml"]
